actualizacion lista de tareas
lista de tareas

--- a/lista de tareas sin CSS/listadetareas.html
+++ b/lista de tareas sin CSS/listadetareas.html
@@ -41,7 +41,7 @@ return (
 
     {
   tareas.map((lista, lis) => (
-    <li key={`li_${lis}`}>
+    <li key={`lista_${lis}`}>
    <input type="checkbox" />
         <span>{lista}</span>
 
